# csh-attest

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  PLAN.md  README.md  SCHEMA.md  SECURITY.md  TODOS.md  meson.build  meson_options.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
init/: attest.csh
notes/: csh-apm-hook-inventory.md
scripts/: gen-config-defaults.py
src/: apm_link_stubs.c  attest.c  attest.h  config.c  config.h  csh_attest.c  csh_attest.h  csp_client.c  csp_client.h  csp_protocol.c  csp_protocol.h  csp_server.c  csp_server.h  diff.c  diff.h  diff_render.c  diff_render.h  jcs.c  jcs.h  jcs_parse.c  jcs_parse.h  sign.c  sign.h
src/adapters/: binaries_list.c  binaries_list.h  elf_note_walk.c  elf_note_walk.h  elf_walker.c  elf_walker.h  etc_merkle.c  etc_merkle.h  kernel_build_id.c  kernel_build_id.h  kernel_uname.c  modules_list.c  modules_list.h
subprojects/: apm_csh.wrap  csp.wrap  slash.wrap
subprojects/packagefiles/: apm_csh-vmem-include.diff
tests/: apm_test_stubs.c  meson.build  test_binaries_list.c  test_config.c  test_csp_knobs.c  test_diff.c  test_elf_walker.c  test_engine.c  test_etc_merkle.c  test_help.c  test_init.c  test_jcs.c  test_jcs_parse.c  test_jcs_vectors.c  test_kernel_build_id.c  test_modules_list.c  test_remote.c  test_sign.c  test_verify.c
tests/jcs/vectors/: README.md
