# Mission allowlist defaults compiled into the .so. Per-mission Yocto
# layers override these at meson setup time:
#
#   meson setup build \
#     -Dbinaries_paths=/usr/bin -Dbinaries_paths=/opt/payload/bin \
#     -Dfiles_paths=/etc/mission/pipeline.yaml
#
# Empty arrays (the v0.4.x-compatible default) → binaries.list and
# files.merkle emit empty / SHA256(""). This matches the v0.4.x manifest
# byte-for-byte except for the new STABLE field rows. The v0.5.0 emit
# also prints a one-line stderr WARNING about un-attested userspace —
# silence with ATTEST_USERSPACE=skip in the environment.
#
# Path validation is loose at meson configure time (caught in config.c
# instead). At runtime, paths from these arrays are passed verbatim to
# the binaries.list / files.merkle adapters.
#
# Per-kind hard cap is 512 entries (PLAN.md: enforced at config-load,
# overflow → error code E106 with refusal-to-emit). meson does not
# enforce the cap; the C loader does.

option(
    'binaries_paths',
    type: 'array',
    value: [],
    description: 'Default paths to attest via build-id walking (binaries.list field).',
)

option(
    'files_paths',
    type: 'array',
    value: [],
    description: 'Default paths to attest via content hashing (files.merkle field).',
)
